Devorah fixed UI of login. When I opened it, the UI is distorted

--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,11 @@ body :-ms-input-placeholder {
   background: #50a3a2;
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
-  top: 50%;
+  /*top: 50%;*/
   left: 0;
   width: 100%;
   height: 400px;
-  margin-top: -200px;
+  margin-top: 2%;
   overflow: hidden;
 }
 .wrapper.form-success .container h1 {
@@ -225,6 +225,8 @@ form button:hover {
 
 .image {
     width: 20%;
-    height: auto;
-    margin-top: 5em;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 2%;
 }
